--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,12 @@
 @tailwind base;
 
-a {
+/* a {
   @apply text-blue-700;
 }
 
 a:hover {
   @apply border-b-2 border-blue-700;
-}
+} */
 
 @tailwind components;
 
@@ -18,4 +18,11 @@ a:hover {
 
 .content ul {
   @apply my-6;
+}
+
+h1 {
+  @apply text-4xl py-3 mb-3;
+}
+h3 {
+  @apply text-xl py-2 mb-3;
 }
